# CLion_HW14

./: CMakeLists.txt  HW14_14_6_task_3.cpp  HW14_6_task_1.cpp  HW14_6_task_2.cpp  HW14_6_task_3.cpp  HW14_6_task_4.cpp  HW14_6_task_5.cpp  main.cpp
