cmake_minimum_required(VERSION 3.17)
project(CLion_HW14)

set(CMAKE_CXX_STANDARD 20)

add_executable(CLion_HW14 main.cpp)
add_executable(task_1 HW14_6_task_1.cpp)
add_executable(task_2 HW14_6_task_2.cpp)
add_executable(task_3 HW14_6_task_3.cpp)
add_executable(task_4 HW14_6_task_4.cpp)
add_executable(task_5 HW14_6_task_5.cpp)

